--- a/Actividad_5_Unidad_2-master/src/app/app.component.html
+++ b/Actividad_5_Unidad_2-master/src/app/app.component.html
@@ -1,2 +1,10 @@
+<section>
+    <div class="container">
+    <h1 class="text-center text-warning">{{ titulo }}</h1>
+    <p>Bienvenido, {{ usuario.nombre }}. </p>
+    <p>Tienes {{ usuario.edad }} años.</p>
+    <p>{{saludar()}}</p>
+    <p>En un año tendrás {{usuario.edad + 1}} años.</p>
+    </div>
+</section>
 
-<app-tarjeta-producto></app-tarjeta-producto>
